# django-ninja-next

./: .gitignore  .pre-commit-config.yaml  README.md  STRIPE_SETUP.md  justfile
.cursor/rules/: backend.mdc  frontend.mdc
.github/workflows/: ci.yml  format-lint.yaml  run-tests.yaml
backend/: .env.example  .env.local  .gitignore  Dockerfile  db.sqlite3  docker_entrypoint.py  pyproject.toml  requirements.txt
backend/core/: api.py  authentication.py  settings.py  urls.py
backend/payments/: admin.py  api.py  models.py  schemas.py  services.py
backend/payments/management/commands/: create_plans.py
backend/users/: admin.py  api.py  schema.py  schemas.py  services.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: factories.py  test_api.py  test_models.py
frontend/: .env.local.example  Dockerfile  README.md  biome.json  bun.lockb  openapi-ts.config.ts  openapi.json  package.json
frontend/src/: hey-api.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/(main)/dashboard/: page.tsx
frontend/src/components/: app-sidebar.tsx  auth-provider.tsx  google-sign-in-button.tsx  icons.tsx  login-form.tsx  nav-main.tsx  nav-pro-upgrade.tsx  nav-user.tsx  pro-modal.tsx  providers.tsx  signup-form.tsx  site-header.tsx
frontend/src/components/common/: free-counter.tsx  logo.tsx  pro-modal.tsx
frontend/src/components/layout/: CallToAction.tsx  Faqs.tsx  Footer.tsx  Header.tsx  Hero.tsx  Pricing.tsx  PrimaryFeatures.tsx  SecondaryFeatures.tsx  SlimLayout.tsx  Testimonials.tsx
frontend/src/components/ui/: icon.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: stripe.ts
frontend/src/providers/: auth-provider.tsx  modal-provider.tsx  query-provider.tsx  user-provider.tsx
frontend/src/tanstack/features/: auth.ts  client.ts  token.ts
frontend/src/tanstack/features/auth/: mutations.ts  queries.ts
frontend/src/utils/: token.ts
guides/: coolify-deployment  google-oauth-setup.md  quick-setup-checklist.md
scripts/: deploy.sh  generate-client.sh
