[project]
name = "django-ninja-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-ninja-jwt>=5.3.5",
    "django>=5.1.5",
    "django-ninja>=1.3.0",
    "django-cors-headers>=4.6.0",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
    "dj-database-url>=2.3.0",
    "whitenoise>=6.9.0",
    "django-allauth[socialaccount]>=65.10.0",
    "stripe>=12.3.0",
    "click>=8.2.1",
    "uvicorn>=0.35.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
    "pytest-asyncio>=0.25.3",
    "factory-boy>=3.3.1",
    "pytest-django>=4.11.1",
    "coverage>=7.6.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.test_settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
markers = ["integration_test: tests that require the real API"]
addopts = "-m 'not integration_test'"
